--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+﻿# Lokale Kompendiumsdateien und Laufzeitdaten
+XML_Kompendium_*.xml
+status.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,3 +209,5 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
